[package]
name = "fourthwall-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
url = "2.5.7"
# Native (dev/tests, server-side)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }

# Browser/WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "wasm-streams"] }